--- a/ViableEdu VF.ipynb
+++ b/ViableEdu VF.ipynb
@@ -64,8 +64,8 @@
     "pswd.clear()\n",
     "\n",
     "# Introduce your credentials\n",
-    "user.send_keys(\"")\n",
-    "pswd.send_keys(\"")\n",
+    "user.send_keys(\"\")\n",
+    "pswd.send_keys(\"\")\n",
     "pswd.send_keys(Keys.RETURN)"
    ]
   },
